--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
             transition: background-color 1s ease-in-out;
         }
     </style>
+    <link rel="manifest" href="manifest.json">
+<script>
+  if ("serviceWorker" in navigator) {
+    navigator.serviceWorker.register("sw.js")
+      .then(() => console.log("Service Worker registered"));
+  }
+</script>
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
 
