--- a/www/index.html
+++ b/www/index.html
@@ -77,10 +77,10 @@
     let audioCharacteristic = null;
 
     // --- Bluetooth UUIDs ---
-    const AUDIO_SERVICE_UUID = '19B10000-E8F2-537E-4F6C-D104768A1214';
-    const AUDIO_CHAR_UUID    = '19B10001-E8F2-537E-4F6C-D104768A1214';
+    const AUDIO_SERVICE_UUID = '19b10000-e8f2-537e-4f6c-d104768a1214';
+    const AUDIO_CHAR_UUID    = '19b10001-e8f2-537e-4f6c-d104768a1214';
 
-    // --- History ---
+    // --- History ---services: ['19b10000-e8f2-537e-4f6c-d104768a1214']
     let safetyHistory = { safe: 0, unsafe: 0 };
 
     function loadHistory() {
